--- a/pandas-exercise/03-Ecommerce Purchases Exercise .ipynb
+++ b/pandas-exercise/03-Ecommerce Purchases Exercise .ipynb
@@ -21,21 +21,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "import pandas as pd"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "df = pd.read_csv('Ecommerce Purchases')"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -46,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -55,6 +59,19 @@
      "data": {
       "text/html": [
        "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
        "<table border=\"1\" class=\"dataframe\">\n",
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
@@ -209,12 +226,14 @@
        "4     24.140.33.94       es           77.82  "
       ]
      },
-     "execution_count": 87,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "df.head()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -225,38 +244,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 10000 entries, 0 to 9999\n",
-      "Data columns (total 14 columns):\n",
-      "Address             10000 non-null object\n",
-      "Lot                 10000 non-null object\n",
-      "AM or PM            10000 non-null object\n",
-      "Browser Info        10000 non-null object\n",
-      "Company             10000 non-null object\n",
-      "Credit Card         10000 non-null int64\n",
-      "CC Exp Date         10000 non-null object\n",
-      "CC Security Code    10000 non-null int64\n",
-      "CC Provider         10000 non-null object\n",
-      "Email               10000 non-null object\n",
-      "Job                 10000 non-null object\n",
-      "IP Address          10000 non-null object\n",
-      "Language            10000 non-null object\n",
-      "Purchase Price      10000 non-null float64\n",
-      "dtypes: float64(1), int64(2), object(11)\n",
-      "memory usage: 1.1+ MB\n"
-     ]
+     "data": {
+      "text/plain": [
+       "(10000, 14)"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "df.shape"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -267,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -275,15 +281,17 @@
     {
      "data": {
       "text/plain": [
-       "50.34730200000025"
+       "50.347302"
       ]
      },
-     "execution_count": 90,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "df['Purchase Price'].mean()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -294,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
@@ -302,19 +310,21 @@
     {
      "data": {
       "text/plain": [
-       "99.989999999999995"
+       "99.99"
       ]
      },
-     "execution_count": 92,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "df['Purchase Price'].max()"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
@@ -325,12 +335,14 @@
        "0.0"
       ]
      },
-     "execution_count": 93,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "df['Purchase Price'].min()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -341,7 +353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 21,
    "metadata": {
     "collapsed": false
    },
@@ -366,12 +378,14 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 94,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "df[df['Language'] == 'en'].count()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -382,7 +396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 23,
    "metadata": {
     "collapsed": false
    },
@@ -394,26 +408,30 @@
       "<class 'pandas.core.frame.DataFrame'>\n",
       "Int64Index: 30 entries, 470 to 9979\n",
       "Data columns (total 14 columns):\n",
-      "Address             30 non-null object\n",
-      "Lot                 30 non-null object\n",
-      "AM or PM            30 non-null object\n",
-      "Browser Info        30 non-null object\n",
-      "Company             30 non-null object\n",
-      "Credit Card         30 non-null int64\n",
-      "CC Exp Date         30 non-null object\n",
-      "CC Security Code    30 non-null int64\n",
-      "CC Provider         30 non-null object\n",
-      "Email               30 non-null object\n",
-      "Job                 30 non-null object\n",
-      "IP Address          30 non-null object\n",
-      "Language            30 non-null object\n",
-      "Purchase Price      30 non-null float64\n",
+      " #   Column            Non-Null Count  Dtype  \n",
+      "---  ------            --------------  -----  \n",
+      " 0   Address           30 non-null     object \n",
+      " 1   Lot               30 non-null     object \n",
+      " 2   AM or PM          30 non-null     object \n",
+      " 3   Browser Info      30 non-null     object \n",
+      " 4   Company           30 non-null     object \n",
+      " 5   Credit Card       30 non-null     int64  \n",
+      " 6   CC Exp Date       30 non-null     object \n",
+      " 7   CC Security Code  30 non-null     int64  \n",
+      " 8   CC Provider       30 non-null     object \n",
+      " 9   Email             30 non-null     object \n",
+      " 10  Job               30 non-null     object \n",
+      " 11  IP Address        30 non-null     object \n",
+      " 12  Language          30 non-null     object \n",
+      " 13  Purchase Price    30 non-null     float64\n",
       "dtypes: float64(1), int64(2), object(11)\n",
       "memory usage: 3.5+ KB\n"
      ]
     }
    ],
-   "source": []
+   "source": [
+    "df[df['Job'] == 'Lawyer'].info()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -426,7 +444,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 28,
    "metadata": {
     "collapsed": false
    },
@@ -439,12 +457,14 @@
        "Name: AM or PM, dtype: int64"
       ]
      },
-     "execution_count": 96,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "df['AM or PM'].value_counts()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -455,7 +475,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 29,
    "metadata": {
     "collapsed": false
    },
@@ -471,12 +491,14 @@
        "Name: Job, dtype: int64"
       ]
      },
-     "execution_count": 97,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "df[\"Job\"].value_counts().head(5)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -487,7 +509,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 30,
    "metadata": {
     "collapsed": false
    },
@@ -499,12 +521,14 @@
        "Name: Purchase Price, dtype: float64"
       ]
      },
-     "execution_count": 99,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "df[df['Lot'] == '90 WT']['Purchase Price']"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -515,7 +539,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 31,
    "metadata": {
     "collapsed": false
    },
@@ -527,12 +551,14 @@
        "Name: Email, dtype: object"
       ]
      },
-     "execution_count": 100,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "df[df['Credit Card'] == 4926535242672853]['Email']  "
+   ]
   },
   {
    "cell_type": "markdown",
@@ -543,11 +569,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 32,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/ipykernel_17731/3569534757.py:1: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
+      "  df[df['CC Provider'] == 'American Express'][df['Purchase Price'] > 95].count()\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
@@ -568,12 +602,14 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 101,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "df[df['CC Provider'] == 'American Express'][df['Purchase Price'] > 95].count()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -584,7 +620,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 33,
    "metadata": {
     "collapsed": false
    },
@@ -592,15 +628,19 @@
     {
      "data": {
       "text/plain": [
-       "1033"
+       "False    8967\n",
+       "True     1033\n",
+       "Name: CC Exp Date, dtype: int64"
       ]
      },
-     "execution_count": 102,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "df['CC Exp Date'].apply(lambda x: x[3:] == '25').value_counts()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -611,7 +651,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 35,
    "metadata": {
     "collapsed": false
    },
@@ -627,12 +667,14 @@
        "Name: Email, dtype: int64"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "df['Email'].apply(lambda x: x.split('@')[1]).value_counts().head(5)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -658,7 +700,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.1"
+   "version": "3.10.9"
   }
  },
  "nbformat": 4,
